- BsButton: improve text color when the component is created from html `<a>`. - BsAppbar: improve calculating height - BsSideDrawer: improve positioning when `clipHeight` property is set to `true`. - BsListNav: fixed css rules break on VitePress

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -410,7 +410,12 @@ a {
   &.#{vars.$prefix}btn,
   &.#{vars.$prefix}btn-fab,
   &.#{vars.$prefix}btn-icon {
+    color: var(--#{vars.$prefix}btn-color);
     text-decoration: none;
+
+    &:hover {
+      color: var(--#{vars.$prefix}btn-hover-color);
+    }
   }
 }
 
