--- a/src/components/ListView/listNav.scss
+++ b/src/components/ListView/listNav.scss
@@ -40,16 +40,7 @@
 
     .#{vars.$prefix}nav-item {
       background-color: var(--#{vars.$prefix}nav-item-state-bg);
-      margin: var(--#{vars.$prefix}listview-item-gap) 0;
       white-space: nowrap;
-
-      &:first-child {
-        margin-top: 0;
-      }
-      
-      &:last-child {
-        margin-bottom: 0;
-      }
 
       > .#{vars.$prefix}nav-item-inner {
         background-color: var(--#{vars.$prefix}nav-item-inner-state-bg);
@@ -343,12 +334,22 @@
 
 // Patch Bootstrap 'reboot.css'
 // This patch must be placed outside the css layer.
-.#{vars.$prefix}list-nav {
+ul.#{vars.$prefix}list-nav {
   padding: 0;
   margin: 0;
   list-style: none;
 
   .#{vars.$prefix}nav-item {
+    margin: var(--#{vars.$prefix}listview-item-gap) 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+    
     > .#{vars.$prefix}nav-item-inner {
       color: var(--#{vars.$prefix}nav-item-state-color);
       text-decoration: none;
